Closed Bug 1538253 Opened 5 years ago Closed 5 years ago

VPXDecoder::IsCompatible does not compare subsampling x members correctly

Categories

(Core :: Audio/Video: Playback, defect, P2)

defect

Tracking

()

RESOLVED FIXED
mozilla68
Tracking Status
firefox67 --- fixed
firefox68 --- fixed

People

(Reporter: bryce, Assigned: bryce)

Details

Attachments

(1 file)

VPXDecoder::IsCompatible appears to be using && between mSubSampling_x and aOther.mSubSampling_x where == is likely what was intended.

This will result in cases where either info does not have subsampling in the x dimension to cause the check to indicate they are incompatible, even if they are.

Pushed by bvandyk@mozilla.com:
https://hg.mozilla.org/integration/autoland/rev/7b0a87b6f940
VPXDecoder::IsCompatible checks subsampling x members for equality. r=jya
Status: ASSIGNED → RESOLVED
Closed: 5 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla68

Comment on attachment 9052903 [details]
Bug 1538253 - VPXDecoder::IsCompatible checks subsampling x members for equality. r?jya!

Beta/Release Uplift Approval Request

  • Feature/Bug causing the regression: Bug 1482059
  • User impact if declined: Negative performance for VP9 videos that don't use subsampling for the x dimension: we will end up recreating decoders far more often than we need to (each key frame).
  • Is this code covered by automated tests?: No
  • Has the fix been verified in Nightly?: Yes
  • Needs manual test from QE?: No
  • If yes, steps to reproduce:
  • List of other uplifts needed: None.
  • Risk to taking this patch: Low
  • Why is the change risky/not risky? (and alternatives if risky): This is a one line patch that fixes a typo.
  • String changes made/needed: None.
Attachment #9052903 - Flags: approval-mozilla-beta?

Comment on attachment 9052903 [details]
Bug 1538253 - VPXDecoder::IsCompatible checks subsampling x members for equality. r?jya!

Typo fix, impacts VP8 performance, uplift approved for 67 beta 6, thanks.

Attachment #9052903 - Flags: approval-mozilla-beta? → approval-mozilla-beta+
Flags: qe-verify-
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: