Bug 1538253 - VPXDecoder::IsCompatible checks subsampling x members for equality. r=jya a=pascalc

We had a stray `&&` where a `==` should have been.

Differential Revision: https://phabricator.services.mozilla.com/D24526

--HG--
extra : rebase_source : 664f6740876d8f0f35eaab81951b845a8ad37df9
extra : source : 7b0a87b6f9402fd9377da61aa839541e3ef192f1